# pyobs-tui

./: README.md  pyproject.toml
src/pyobs_tui/: app.py  tui.py
